--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dim_image_height">200dp</dimen>
+    <dimen name="dim_default_text_layout_margin_left">20dp</dimen>
+    <dimen name="dim_default_text_layout_margin_right">20dp</dimen>
+    <dimen name="dim_description_top">10dp</dimen>
 </resources>
